syntax="proto3";

option go_package = "github.com/shashankbiet/ecommerce-backend/search-service/proto/search";

package searchpb;

// protoc -I=proto --go_out=. --go_opt=module=github.com/shashankbiet/ecommerce-backend/search-service --go-grpc_out=require_unimplemented_servers=false:. --go-grpc_opt=module=github.com/shashankbiet/ecommerce-backend/search-service proto/**/*.proto
service SearchService{
    rpc GetProduct(ProductSearchRequest) returns (ProductSearchResponse);
}

message  ProductSearchRequest {
    string keywords = 1;
    string category = 2;
    string sub_category = 3;
    int32 city_id = 4;
}

message ProductSearchResponse {
    string keywords = 1;
    string category = 2;
    string sub_category = 3;
    int32 city_id = 4;
    uint32 total_results = 5;
    repeated Product products = 6;
}

message Product{
    int32 id = 1;
    string name = 2;
    string description = 3;
    string brand = 4;
    string category = 5;
    string subCategory = 6;
}